# rlottie-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
doc/: TODO-TESTING.md  TODO.md
examples/: Cargo.toml
examples/src/: main.rs
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: fuzz_json.rs
rlottie_core/: Cargo.toml
rlottie_core/benches/: render.rs
rlottie_core/src/: lib.rs  timeline.rs  types.rs
rlottie_core/src/geometry/: mod.rs  path.rs  tess.rs
rlottie_core/src/loader/: json.rs  mod.rs
rlottie_core/src/renderer/: cpu.rs  mod.rs  wasm.rs
rlottie_core/tests/: fill_stroke.rs  golden_hash.rs  gradient.rs  precomp.rs  property.rs  repeater.rs  testutil.rs  text.rs  time_remap.rs  trim.rs  util.rs  wasm_render.rs
scripts/: gen_png.sh  lottie2png.cpp  pre_checkin.sh  setup-ci-env.sh  setup_corpus.sh  stb_image_write.h
tests/: golden_hash.rs  mask.rs  util.rs
tests/assets/: hashes.json
tests/data/: fill_stroke.json  image_embedded.json  mask.json  min_shape.json  precomp.json  repeater.json  trim.json
