[package]
name = "rlottie_core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
[workspace]


[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rlottie_core]
path = "../rlottie_core"

[[bin]]
name = "fuzz_json"
path = "fuzz_targets/fuzz_json.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
