[package]
name = "rlottie_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
simd = ["lyon"]
wasm = ["wasm-bindgen"]
embedded = []
bench = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11"
lyon = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
proptest = "1"
image = "0.25.6"
sha2 = "0.10"
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "nightly"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(nightly)"] }
